--- a/package.json
+++ b/package.json
@@ -27,13 +27,17 @@
 	"packageManager": "pnpm@10.27.0",
 	"devDependencies": {
 		"@biomejs/biome": "^2.3.13",
+		"@microsoft/api-extractor": "^7.56.0",
 		"@types/node": "^24.10.9",
 		"@types/picomatch": "^4.0.2",
 		"typescript": "^5.9.3",
+		"unplugin-dts": "1.0.0-beta.6",
 		"vite": "^7.3.1",
+		"vite-plugin-dts": "^4.5.4",
 		"vitest": "^4.0.18"
 	},
 	"dependencies": {
+		"glob": "^13.0.0",
 		"picomatch": "^4.0.3",
 		"valibot": "^1.2.0"
 	},
