--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"unplugin-dts": "1.0.0-beta.6",
 		"vite": "^7.3.1",
 		"vite-plugin-dts": "^4.5.4",
+		"vite-plugin-wasm": "^3.5.0",
 		"vitest": "^4.0.18"
 	},
 	"dependencies": {
