--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"@microsoft/api-extractor": "^7.56.0",
 		"@types/node": "^24.10.9",
 		"@types/picomatch": "^4.0.2",
+		"rollup": "^4.57.1",
 		"typescript": "^5.9.3",
 		"unplugin-dts": "1.0.0-beta.6",
 		"vite": "^7.3.1",
