--- a/package.json
+++ b/package.json
@@ -35,12 +35,17 @@
 		"unplugin-dts": "1.0.0-beta.6",
 		"vite": "^7.3.1",
 		"vite-plugin-dts": "^4.5.4",
+		"vite-plugin-inspect": "^11.3.3",
 		"vite-plugin-wasm": "^3.5.0",
 		"vitest": "^4.0.18"
 	},
 	"dependencies": {
+		"@types/debug": "^4.1.12",
+		"debug": "^4.4.3",
 		"glob": "^13.0.0",
+		"obug": "^2.1.1",
 		"picomatch": "^4.0.3",
+		"pino": "^10.3.0",
 		"valibot": "^1.2.0"
 	},
 	"peerDependencies": {
