--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"exports": {
-		"default": "./dist/index.js",
-		"types": "./dist/index.d.ts"
+		"types": "./dist/index.d.ts",
+		"default": "./dist/index.js"
 	},
 	"type": "module",
 	"repository": {
