--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
 		"@microsoft/api-extractor": "^7.56.0",
 		"@types/node": "^24.10.9",
 		"@types/picomatch": "^4.0.2",
+		"esbuild-plugin-pino": "^2.3.3",
+		"pino-pretty": "^13.1.3",
 		"rollup": "^4.57.1",
 		"typescript": "^5.9.3",
 		"unplugin-dts": "1.0.0-beta.6",
