--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"@microsoft/api-extractor": "^7.56.0",
 		"@types/node": "^24.10.9",
 		"@types/picomatch": "^4.0.2",
+		"@vitest/coverage-v8": "4.0.18",
 		"esbuild-plugin-pino": "^2.3.3",
 		"pino-pretty": "^13.1.3",
 		"rollup": "^4.57.1",
