--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"@types/debug": "^4.1.12",
 		"debug": "^4.4.3",
 		"glob": "^13.0.0",
+		"node-object-hash": "^3.1.1",
 		"obug": "^2.1.1",
 		"picomatch": "^4.0.3",
 		"pino": "^10.3.0",
